--- a/index.html
+++ b/index.html
@@ -14,8 +14,16 @@
 
   <script src="ui-handler.js"></script>
   <link type="text/css" href="philowiki-api.css" rel="stylesheet" />
-
 </head>
+<!--
+   TODO:
+   1. Identify loops in current Trace.                - DONE
+   2. Report Error in current trace in case there is  - DONE
+   3. initial modal box                               -
+   4. Code Link                                       - DONE
+   5. Populate random articles in suggestion box      - DONE
+   6. Loading animation while tracing                 - DONE
+-->
 <body onload="">
 <div class="container-fluid">
   <div class="row">
@@ -32,55 +40,24 @@
         </div>
       </div>
       <div class="panel panel-default">
-        <div class="panel-heading">Add to Graph ...
+        <div class="panel-heading">Suggestions (Random articles)
           <span id="add-panelinfo" style="float: right">
-            <span class="glyphicon glyphicon glyphicon-chevron-up"></span>
+            <span class="glyphicon glyphicon-inbox"></span>
           </span>
         </div>
         <div class="panel-body" id="add-panelBody">
           <ul class="nav nav-pills small" id="add-btns">
-            <li>
-              <div class="btn-group small">
-                <button type="button" class="btn btn-primary btn-sm">India</button>
-              </div>
-            </li>
-            <li>
-              <div class="btn-group small">
-                <button type="button" class="btn btn-primary btn-sm">Air</button>
-              </div>
-            </li>
-            <li>
-              <div class="btn-group small">
-                <button type="button" class="btn btn-primary btn-sm">Pyramid</button>
-              </div>
-            </li>
-            <li>
-              <div class="btn-group small">
-                <button type="button" class="btn btn-primary btn-sm">China</button>
-              </div>
-            </li>
-            <li>
-              <div class="btn-group small">
-                <button type="button" class="btn btn-primary btn-sm">Dire Straits</button>
-              </div>
-            </li>
-            <li>
-              <div class="btn-group small">
-                <button type="button" class="btn btn-primary btn-sm">Computation</button>
-              </div>
-            </li>
-            <li>
-              <div class="btn-group small">
-                <button type="button" class="btn btn-primary btn-sm">Theory</button>
-              </div>
-            </li>
           </ul>
         </div>
       </div>
 
       <div class="panel panel-default">
         <!-- Default panel contents -->
-        <div class="panel-heading">Trace</div>
+        <div class="panel-heading">Trace
+          <span id="trace-panelinfo" style="float: right">
+            <span class="glyphicon glyphicon-off"></span>
+          </span>
+        </div>
         <!-- List group -->
         <ul class="list-group small" id="currentTrace">
         </ul>
@@ -89,36 +66,18 @@
       <div id="result" style="display:none; overflow: scroll; height: 250px">
       </div>
     </div>
+
     <div class="col-md-9" id="graphArea">
       <div id="infovis"></div>
     </div>
+
+    <a href="https://github.com/shivam-nagar/philo-wiki" target="_blank">
+      <img style="position: absolute; top: 0; right: 0; border: 0;"
+           src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67"
+           alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png">
+    </a>
   </div>
 </div>
-<script type="text/javascript">
-var jsonList = {};
-var finalList = {};
-$("#submitBtn").click(function(){
-  resetGraph();
-	var url = $("#urlText").val();
-  $("#no-trace").remove();
-  $("#displayed-items").append($('<span class="label label-primary">'+url+'</span>'))
-  getWikiPage(url);
-  disableActions();
-});
-
-$("#add-btns li div button").click(function(){
-  $("#urlText").val(this.innerHTML);
-  $("#submitBtn").click();
-  this.parentNode.parentNode.remove();
-})
-
-function disableActions() {
-  $("#urlText").attr("disabled","true")
-  $(".btn").attr("disabled","true")
-  $("#currentTrace").empty()
-}
-
-</script>
 <script src="philowiki-api.js"></script>
 
 </body>
