Added favicon, Jit path fix.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <html>
 <head>
-  <link type="text/css" href="./jit/Examples/css/base.css" rel="stylesheet" />
-  <link type="text/css" href="./jit/Examples/css/RGraph.css" rel="stylesheet" />
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+  <link type="text/css" href="./Jit/Examples/css/base.css" rel="stylesheet" />
+  <link type="text/css" href="./Jit/Examples/css/RGraph.css" rel="stylesheet" />
 
   <script src="jquery-2.0.3.min.js"></script>
-  <script language="javascript" type="text/javascript" src="./jit/jit.js"></script>
-  <script language="javascript" type="text/javascript" src="./jit/Examples/RGraph/example1.js"></script>
+  <script language="javascript" type="text/javascript" src="./Jit/jit.js"></script>
+  <script language="javascript" type="text/javascript" src="./Jit/Examples/RGraph/example1.js"></script>
 
   <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
   <!--link rel="stylesheet" href="css/style.css"-->
